@@ -1,5 +1,5 @@
 /**
- * Copyright © 2016-2020 The Thingsboard Authors
+ * Copyright © 2016-2021 The Thingsboard Authors
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -37,7 +37,6 @@ import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
 import java.time.Instant;
 import java.util.ArrayList;
-import java.util.Date;
 import java.util.Iterator;
 import java.util.List;
 import java.util.UUID;
@@ -146,19 +145,21 @@ public class CassandraDbHelper {
                 if (row.isNull(index)) {
                     return null;
                 } else if (type.getProtocolCode() == ProtocolConstants.DataType.DOUBLE) {
-                    str = new Double(row.getDouble(index)).toString();
+                    str = Double.valueOf(row.getDouble(index)).toString();
                 } else if (type.getProtocolCode() == ProtocolConstants.DataType.INT) {
-                    str = new Integer(row.getInt(index)).toString();
+                    str = Integer.valueOf(row.getInt(index)).toString();
                 } else if (type.getProtocolCode() == ProtocolConstants.DataType.BIGINT) {
-                    str = new Long(row.getLong(index)).toString();
+                    str = Long.valueOf(row.getLong(index)).toString();
                 } else if (type.getProtocolCode() == ProtocolConstants.DataType.UUID) {
                     str = row.getUuid(index).toString();
                 } else if (type.getProtocolCode() == ProtocolConstants.DataType.TIMEUUID) {
                     str = row.getUuid(index).toString();
                 } else if (type.getProtocolCode() == ProtocolConstants.DataType.FLOAT) {
-                    str = new Float(row.getFloat(index)).toString();
+                    str = Float.valueOf(row.getFloat(index)).toString();
                 } else if (type.getProtocolCode() == ProtocolConstants.DataType.TIMESTAMP) {
                     str = ""+row.getInstant(index).toEpochMilli();
+                } else if (type.getProtocolCode() == ProtocolConstants.DataType.BOOLEAN) {
+                    str = Boolean.valueOf(row.getBoolean(index)).toString();
                 } else {
                     str = row.getString(index);
                 }
@@ -207,6 +208,8 @@ public class CassandraDbHelper {
             boundStatementBuilder.setFloat(column, Float.valueOf(value));
         } else if (type.getProtocolCode() == ProtocolConstants.DataType.TIMESTAMP) {
             boundStatementBuilder.setInstant(column, Instant.ofEpochMilli(Long.valueOf(value)));
+        } else if (type.getProtocolCode() == ProtocolConstants.DataType.BOOLEAN) {
+            boundStatementBuilder.setBoolean(column, Boolean.valueOf(value));
         } else {
             boundStatementBuilder.setString(column, value);
         }
